2015-03-10  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_ndgrid.m: (0.4.1)

	- Small changes. Fix copyright date, Ben as author ("Modified by"
	is for third party software), typos.

	* matlab/FileFormatToolbox/dcm2scimat.m: (0.4.1)

	- Rename variable "foo" as "pos". foo (and bar) are "placeholder
	names used to name entities such as variables, functions, and
	commands whose purpose is unimportant and serve only to
	demonstrate a concept." (Wikipedia).

	* matlab/DiffusionMRIToolbox/fit_DT.m: (0.1.8)

	- Add note to point at Jo's alternative method fit_DT_YHd_method.

2015-03-09  Benjamin Villard  <b.016434@gmail.com>

	* matlab/FiltersToolbox/scimat_intersect_plane.m: (0.4.3)

	- Replace interp3 by interpn.

	* matlab/FiltersToolbox/scimat_ndgrid: (0.4.0)

	- Modified scimat_ndgrid to allow for 2d->4D inputs.

2014-03-09  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* add matlab/test/test_tensor_fitting_methods.m (0.1.1)

	- Compares two methods of fitting the diffusion tensor to simulated data

2015-03-06  Benjamin Villard  <b.016434@gmail.com>

	* Add matlab/ThirdPartyToolbox/InfoTheoryToolbox

	- Added Information Theory toolbox provided on MATLAB Central by
	Michael Chen.  This toolbox contains various matlab files to
	compute nmi (normalized mutual information), and different entropy
	measures. File was obtained here:

	http://uk.mathworks.com/matlabcentral/fileexchange/35625-information-theory-toolbox/content/nmi.m

2014-03-06  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* matlab/DiffusionMRIToolbox/fit_DT.m (0.1.7)

	- Can now perform a weighted linear tensor fit

	* matlab/DiffusionMRIToolbox/fit_stretched_exponential.m (0.1.3)

	- Now only fits the voxels that are above the noise floor (extra
	input argument for noise threshold, and output argument for number
	of shells fitted in each voxel).

2015-02-27  Benjamin Villard  <b.016434@gmail.com>

	* matlab/FileFormatToolbox/dcm2scimat.m: (0.4.0)
